syntax = "proto3";

option csharp_namespace = "UserDb.Protos";
package dbdata;

import "msgDbDataCommon.proto";
import "msgLanguage.proto";

// service definition.
service LanguageDataServices {
  rpc Get (LanguageDataFilter) returns (LanguageDataStruct); 
  rpc GetList (LanguageDataFilter) returns (ListLanguageDataResponse); 
  
  rpc Add(LanguageDataStruct) returns (ResponseMessage);
  rpc Edit(LanguageDataStruct) returns (ResponseMessage);
  rpc Delete(IdRequest) returns (ResponseMessage);
}